# copain

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_REVIEW.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/rules/: calendar.md  config-env.md  handlers.md  llm.md  project-structure.md  python-conventions.md  scheduler.md
.github/workflows/: ci.yml
bot/: cache.py  config.py  db.py  handlers.py  http_retry.py  logging_conf.py  main.py  security.py  sentry_setup.py  telegram_sender.py
bot/briefing/: service.py  weather.py
bot/calendar/: client.py  models.py
bot/fuel/: __init__.py  client.py  geocoding.py  models.py
bot/llm/: client.py  parser.py  prompt.py
bot/memory/: embeddings.py  manager.py
bot/proactivity/: __init__.py  models.py  rules.py  service.py
bot/rss/: fetcher.py  manager.py  models.py
bot/search/: searxng.py
bot/tasks/: manager.py  models.py  scheduler.py
tests/: conftest.py  test_briefing.py  test_cache.py  test_calendar.py  test_config.py  test_embedder.py  test_feeds.py  test_fuel_client.py  test_handlers_dates.py  test_handlers_process.py  test_http_retry.py  test_llm_client.py  test_logging_conf.py  test_memory.py  test_nominatim.py  test_parser.py  test_proactivity_models.py  test_proactivity_rules.py  test_proactivity_service.py  test_scheduler_interval.py  test_scheduler_security.py  test_searxng_cache.py  test_security.py  test_sentry.py  test_streaming.py  test_tasks.py  test_weather.py
